@@ -8,7 +8,6 @@
 #include <iomanip>
 #include <vector>
 #include <fstream>
-#include "files/utils.h"
 
 using std::cout;
 using std::cerr;
@@ -33,7 +32,7 @@ using std::ofstream;
 void bg_out(const string &fname)
 {
 	ofstream o;
-	U7open(o, fname.c_str());
+	o.open(fname.c_str());
 	
 	if(o.fail())
 	{
@@ -62,7 +61,7 @@ void bg_out(const string &fname)
 void si_out(const string &fname)
 {
 	ofstream o;
-	U7open(o, fname.c_str());
+	o.open(fname.c_str()));
 	
 	if(o.fail())
 	{
